--- a/index.html
+++ b/index.html
@@ -160,7 +160,35 @@
       <!-- Main Middle Part END -->
 
       <!-- Main Right Side START -->
-      <div class="main-right"></div>
+      <div class="main-right">
+        <!-- Message -->
+        <div class="message">
+          <!-- Message Title -->
+          <div class="message-title">
+            <h2>Message</h2>
+            <i class="uil uil-edit"></i>
+          </div>
+          <!-- Search Bar -->
+          <div class="search-bar">
+            <i class="uil uil-search-alt"></i>
+            <input type="search" name="navbar-search" id="navbar-search" placeholder="Search Message" />
+          </div>
+          <!-- Function Panel -->
+          <div class="function-panel">
+            <span class="active">Primary</span>
+            <span>General</span>
+            <span>Requests</span>
+          </div>
+
+          <!-- Friend List -->
+          <div class="friend-list">
+          </div>
+        </div>
+
+        <div class="request-list">
+          <h2>Requests</h2>
+        </div>
+      </div>
       <!-- Main Right Side END -->
     </div>
   </main>
